basic front end chess implementation with controls skeleton

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 :root {
 	--background-color: green;
     
-    --chess-white-tile: #3a3a30;
-    --chess-black-tile: #1e1e10;
-    --chess-white-color: #fafade;
-    --chess-black-color: #0e0e1a;
+    --chess-white-tile: #afa373;
+    --chess-black-tile: #70694a;
+    --chess-white-color: #fff;
+    --chess-black-color: #000;
 
 }
