--- a/src/components/chess/ChessSquare.scss
+++ b/src/components/chess/ChessSquare.scss
@@ -1,7 +1,7 @@
 .ChessSquare {
-	width: 50px;
-	height: 50px;
-	
+    pointer-events: stroke;
+    cursor: pointer;
+    	
     // White tile
 	&[data-color="false"] {
 		background: var(--chess-white-tile);
