Refactor: Put sass in its own directory

--- a/src/sass/config/_defaultVars.scss
+++ b/src/sass/config/_defaultVars.scss
@@ -1,9 +1,8 @@
 :root {
 	--background-color: green;
     
-    --chess-white-tile: #afa373;
-    --chess-black-tile: #70694a;
+    --chess-white-tile: #66669e;
+    --chess-black-tile: #3b3b4f;
     --chess-white-color: #fff;
     --chess-black-color: #000;
-
 }
