Allow user to drag piece, add piece hovering over mouse while dragging

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 // Components
 @import
     './components/Header',
+    './components/chess/SelectedPiece',
     './components/chess/ChessBoard',
     './components/chess/ChessSquare',
     './components/chess/ChessPiece';
