--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,21 +1,12 @@
 // Config
-@import 
-    './config/defaultVars',
-    './config/html';
+@import "./config/defaultVars", "./config/html";
 
 // Mixins
-@import
-    './mixins/page';
+@import "./mixins/page";
 
 // Pages
-@import
-    './pages/Home',
-    './pages/Game';
+@import "./pages/Home", "./pages/Game";
 
 // Components
-@import
-    './components/Header',
-    './components/chess/SelectedPiece',
-    './components/chess/ChessBoard',
-    './components/chess/ChessSquare',
-    './components/chess/ChessPiece';
+@import "./components/Header", "./components/chess/ChessBoardDevPanel", "./components/chess/SelectedPiece",
+	"./components/chess/ChessBoard", "./components/chess/ChessSquare", "./components/chess/ChessPiece";
